[gd_scene load_steps=29 format=3 uid="uid://cnns0ecdyngoy"]

[ext_resource type="Script" uid="uid://dc3wu1n8yl2wl" path="res://player.gd" id="1_f3sb7"]
[ext_resource type="Texture2D" uid="uid://bdl2r8l08s7ud" path="res://Concrete017_1K-JPG_Color.jpg" id="2_fj7yv"]
[ext_resource type="Texture2D" uid="uid://dr6yjheoo6n2c" path="res://brick tile 1.png" id="3_pkg7o"]
[ext_resource type="Script" uid="uid://dvl5piate85hl" path="res://ui.gd" id="3_tlwt5"]
[ext_resource type="Script" uid="uid://sh88rdhbxolr" path="res://phone.gd" id="4_aqk2v"]
[ext_resource type="Texture2D" uid="uid://bcm58stdkls2d" path="res://untitled0001.png" id="5_036b0"]
[ext_resource type="Texture2D" uid="uid://dm64r3cgw5fk" path="res://painted lady 1.png" id="8_gbfbk"]
[ext_resource type="Texture2D" uid="uid://dadw3dwdawk8r" path="res://grass backround.png" id="9_ioo17"]
[ext_resource type="Script" uid="uid://ddt2n1wnew744" path="res://roam_area.gd" id="10_wse8f"]
[ext_resource type="Texture2D" uid="uid://ddhspihjqpbuj" path="res://min hand0001.png" id="11_26xuy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fj7yv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_036b0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dwbse"]
bg_color = Color(0.340339, 0.340339, 0.340339, 1)

[sub_resource type="Animation" id="Animation_pkg7o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_dwbse"]
resource_name = "sec_hand"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pkg7o"]
_data = {
&"RESET": SubResource("Animation_pkg7o"),
&"sec_hand": SubResource("Animation_dwbse")
}

[sub_resource type="Animation" id="Animation_gbfbk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("min hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ioo17"]
resource_name = "minute_hand"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("min hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wse8f"]
_data = {
&"RESET": SubResource("Animation_gbfbk"),
&"minute_hand": SubResource("Animation_ioo17")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dwbse"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pkg7o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gbfbk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ioo17"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wse8f"]

[sub_resource type="Animation" id="Animation_ic0uy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wse8f"]
resource_name = "clicked"
length = 0.12
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.12),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3n1d"]
_data = {
&"RESET": SubResource("Animation_ic0uy"),
&"clicked": SubResource("Animation_wse8f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ioo17"]
size = Vector2(1159, 767)

[node name="world" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_f3sb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_fj7yv")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(-1, -1)
scale = Vector2(0.0644531, 0.0644531)
texture = ExtResource("2_fj7yv")

[node name="BrickTile1" type="Sprite2D" parent="."]
z_index = -4
position = Vector2(67, 52)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_pkg7o")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -4
offset_left = -1001.0
offset_top = -949.0
offset_right = 18999.0
offset_bottom = 19051.0
scale = Vector2(0.14, 0.14)
texture = ExtResource("3_pkg7o")
stretch_mode = 1

[node name="Concrete0171k-jpgColor" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.381703, 0.381703, 0.381703, 1)
z_index = -4
position = Vector2(1.99998, 0.75)
scale = Vector2(3.39062, 2.5957)
texture = ExtResource("2_fj7yv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_tlwt5")

[node name="Hud" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -66.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 0

[node name="HUD bar" type="PanelContainer" parent="CanvasLayer/UI/Hud"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -547.5
offset_right = 547.5
offset_bottom = 71.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/Hud/HUD bar"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/Hud/HUD bar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="hours logged" type="Label" parent="CanvasLayer/UI/Hud/HUD bar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Hackatime Hours: 0"

[node name="hackers" type="Label" parent="CanvasLayer/UI/Hud/HUD bar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Hackers: 1"

[node name="staff" type="Label" parent="CanvasLayer/UI/Hud/HUD bar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Staff: 0"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/Hud"]
layout_mode = 0
offset_left = -518.0
offset_top = -45.0
offset_right = -392.0
offset_bottom = -5.0
theme_override_constants/separation = 10

[node name="phone" type="Button" parent="CanvasLayer/UI/Hud/HBoxContainer"]
layout_mode = 2
text = "Phone"

[node name="Button2" type="Button" parent="CanvasLayer/UI/Hud/HBoxContainer"]
layout_mode = 2
text = "Phone"

[node name="phone" type="PanelContainer" parent="CanvasLayer/UI"]
custom_minimum_size = Vector2(280, 420)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_036b0")
script = ExtResource("4_aqk2v")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/phone"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 40

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UI/phone/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dwbse")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/phone/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="aprove" type="Button" parent="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Aprove"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "1"
placeholder_text = "1"
alignment = 1

[node name="price" type="Label" parent="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "$100"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="hire" type="Button" parent="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Hire"

[node name="price" type="Label" parent="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "$200"
horizontal_alignment = 1

[node name="upgrades" type="Button" parent="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="hire3" type="Button" parent="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "blabla"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer/UI/phone"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 8

[node name="home button" type="Button" parent="CanvasLayer/UI/phone/AspectRatioContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "         "

[node name="clock" type="Node2D" parent="."]

[node name="clock" type="Sprite2D" parent="clock"]
z_index = -1
position = Vector2(-1, 17)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_036b0")

[node name="sec hand" type="Sprite2D" parent="clock/clock"]
position = Vector2(2, -30)
scale = Vector2(0.7, 0.7)
texture = ExtResource("11_26xuy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="clock/clock/sec hand"]
libraries = {
&"": SubResource("AnimationLibrary_pkg7o")
}
autoplay = "sec_hand"

[node name="min hand" type="Sprite2D" parent="clock/clock"]
position = Vector2(2, -30)
texture = ExtResource("11_26xuy")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="clock/clock/min hand"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_wse8f")
}

[node name="clockbutton" type="Button" parent="clock/clock"]
custom_minimum_size = Vector2(200, 200)
offset_left = -96.0
offset_top = -132.0
offset_right = 104.0
offset_bottom = 68.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_dwbse")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_pkg7o")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_gbfbk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ioo17")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wse8f")
flat = true

[node name="Staff" type="Timer" parent="clock/clock"]
wait_time = 2.0
autostart = true

[node name="passive_aplicants" type="Timer" parent="clock/clock"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="clock/clock"]
libraries = {
&"": SubResource("AnimationLibrary_k3n1d")
}

[node name="PaintedLady1" type="Sprite2D" parent="."]
position = Vector2(-139, -461)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_gbfbk")

[node name="PaintedLady2" type="Sprite2D" parent="."]
position = Vector2(161, -457)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_gbfbk")

[node name="PaintedLady3" type="Sprite2D" parent="."]
position = Vector2(468, -449)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_gbfbk")

[node name="PaintedLady4" type="Sprite2D" parent="."]
position = Vector2(-443, -453)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_gbfbk")

[node name="GrassBackround" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(3, -65)
texture = ExtResource("9_ioo17")

[node name="roam area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 72
script = ExtResource("10_wse8f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="roam area"]
position = Vector2(18.5, 112.5)
shape = SubResource("RectangleShape2D_ioo17")

[connection signal="pressed" from="CanvasLayer/UI/Hud/HBoxContainer/phone" to="CanvasLayer/UI/phone" method="_on_phone_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer/VBoxContainer/aprove" to="CanvasLayer/UI" method="aplicant_aproved"]
[connection signal="pressed" from="CanvasLayer/UI/phone/MarginContainer/PanelContainer/VBoxContainer/VBoxContainer2/hire" to="CanvasLayer/UI" method="_on_hire_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/phone/AspectRatioContainer/home button" to="CanvasLayer/UI/phone" method="_on_phone_pressed"]
[connection signal="pressed" from="clock/clock/clockbutton" to="CanvasLayer/UI" method="clock_ticked"]
[connection signal="timeout" from="clock/clock/Staff" to="CanvasLayer/UI" method="_on_staff_timeout"]
